# vulkan_neural_network

./: CMakeLists.txt  LICENSE
app/: CMakeLists.txt
app/naive/: CMakeLists.txt
app/naive/src/impl/: Layer.cpp  NeuralNetwork.hpp  Neuron.hpp  ScopedTimer.cpp  ScopedTimer.hpp  Timer.cpp  Timer.hpp  load_images.cpp  load_labels.cpp  load_labels.hpp
app/src/: main.cpp
app/src/impl/: Float.hpp  Layer.cpp  Layer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  Neuron.hpp  load_images.cpp  load_images.hpp  swap_endian.cpp  swap_endian.hpp
libs/warnings/: CMakeLists.txt
